[package]
name = "fangjia"
version = "0.1.0"
authors = ["haoming06 <haoming06@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12.35"
select = "0.4.3"
plotters = "0.2.5"
reqwest = "0.9.20"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
user_agent = "0.7.0"
cookie = "0.12.0"
cookie_store = "0.7.0"
scraper = "0.10.1"
regex = "1.3.1"
csv = "1.1.1"